objects/SLC_Subscription_Preferences__c.object
<CustomObject>
    <fields>
        <fullName>SLC_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Subscription Preferences</relationshipLabel>
        <relationshipName>Subscription_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLC_ME_Balanced__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to receive J.P. Morgan Asset Management marketing emails</description>
        <label>J.P. Morgan Asset Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_ME_Columbia_Threadneedle__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to receive Columbia Threadneedle marketing emails</description>
        <label>Columbia Threadneedle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_ME_Credit_Alternatives__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to receive Credit Alternatives marketing emails</description>
        <label>Credit Alternatives</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_ME_Economic_Insights__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to receive Economic Insights marketing emails</description>
        <label>Economic Insights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_ME_Equity__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to receive Equity marketing emails</description>
        <label>Equity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_ME_Fixed_Income__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to receive Fixed Income marketing emails</description>
        <label>Fixed Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_ME_Index_Investments__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to receive Index Investments marketing emails</description>
        <label>Systematic Solutions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_ME_Infrastructure__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to receive Infrastructure marketing emails</description>
        <label>Infrastructure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_ME_Listed_Property__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to receive Listed Property marketing emails</description>
        <label>Listed Property</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_ME_Multi_Manager__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to receive Multi Manager marketing emails</description>
        <label>Multi-Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_ME_Multi_strategy__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to receive Multi Strategy marketing emails</description>
        <label>Multi-strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_ME_Publications__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to receive Publications marketing emails</description>
        <label>Publications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_PC_Balanced__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to see J.P. Morgan Asset Management content on the portal</description>
        <label>J.P. Morgan Asset Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_PC_Columbia_Threadneedle__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to see Columbia Theadneedle content on the portal</description>
        <label>Columbia Threadneedle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_PC_Credit_Alternatives__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to see Credit Alternatives content on the portal</description>
        <label>Credit Alternatives</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_PC_Economic_Insights__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to see Economic Insights content on the portal</description>
        <label>Economic Insights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_PC_Equity__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to see Equity content on the portal</description>
        <label>Equity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_PC_Fixed_Income__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to see Fixed Income content on the portal</description>
        <label>Fixed Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_PC_Index_Investments__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to see Index Investments content on the portal</description>
        <label>Systematic Solutions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_PC_Infrastructure__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to see Infrastructure content on the portal</description>
        <label>Infrastructure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_PC_Listed_Property__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to see Listed Property content on the portal</description>
        <label>Listed Property</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_PC_Multi_Manager__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to see Multi Manager content on the portal</description>
        <label>Multi-Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_PC_Multi_strategy__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to see Multi Strategy content on the portal</description>
        <label>Multi-strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_PC_Publications__c</fullName>
        <description>Selected by STANLIB client portal user if they wish to see Publications content on the portal</description>
        <label>Publications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Subscription Preferences</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Subscription Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Prevent_multiple_creations</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), ISBLANK(SLC_Contact__r.SLC_Subscription_Preferences__c) = false)</errorConditionFormula>
        <errorMessage>Subscription Preference record already exists for this user</errorMessage>
    </validationRules>
</CustomObject>